more clean up by suppressing warnings and replacing new Integer